tests/ui/borrowck/borrowck-init-op-equal.stderr
error[E0381]: used binding `v` isn't initialized
  --> $DIR/borrowck-init-op-equal.rs:3:5
   |
LL |     let v: isize;
   |         - binding declared here but left uninitialized
LL |     v += 1;
   |     ^^^^^^ `v` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let v: isize = 42;
   |                  ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
